# portfolio-v3

./: .env.example  .gitignore  .prettierignore  README.md  commitlint.config.js  debug_a11y.py  eslint.config.mjs  firestore.rules  next.config.ts  package-lock.json  package.json  page_source.html  pnpm-lock.yaml  pr_body.txt  pr_desc.txt  railway.json  storage.rules  tailwind.config.ts  tsconfig.json  verification_about_window.py  verify.py  verify_a11y.py
.Jules/: bolt.md  palette.md
.jules/: bolt.md
app/: globals.css  layout.tsx  page.tsx
app/api/spotify/: auth.ts
app/components/: DesktopIcons.tsx  Navbar.tsx  Terminal.tsx
app/components/Terminal/: HelpCommand.tsx  Terminal.tsx
app/components/helpers/: Experience.tsx  Projects.tsx  Skills.tsx
app/components/spotify/: NowPlaying.tsx  Playlists.tsx  RecentlyPlayed.tsx  TopArtists.tsx  TopGenres.tsx  TopTracks.tsx  api.ts
app/components/ui/: ButtonToggle.tsx  CustomCircularProgress.tsx  (+8 more)
app/contexts/: ThemeContext.tsx
app/spotify-auth/: page.tsx
docs/: pranav-ai-deployment.md
lib/: HelpCommand.tsx  fetch.ts  firebase.js  math.ts  spotify.test.ts  spotify.ts  utils.ts
lib/pranav/: azure.ts  config.ts  security.ts
pranav/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
pranav/src/: __init__.py  config.py  database.py  embeddings.py  llm.py
pranav/src/routes/: admin.py  chat.py
pranav/tests/: test_file_extraction.py
tests/pranav/: azure.test.ts  security.test.ts
types/: spotify.d.ts
verification/: verify_controls.py  verify_desktop.py  verify_window_controls.py
(+22 files in other folders)
